Define icon classes and fix spacing for Tumblr

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -475,6 +475,9 @@ footer
           height: 26px
           width: 26px
 
+          &.tumblr-icon
+            width: 16px
+
       &:hover svg
         fill: $hover-color
 
